WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 185169
Fix build error after
r231194
https://bugs.webkit.org/show_bug.cgi?id=185169
Summary
Fix build error after r231194
GSkachkov
Reported
2018-05-01 11:46:01 PDT
he iOS Simulator debug build is broken by this change. ./bindings/js/JSDOMWindowBase.cpp:495:1: error: function 'compileStreaming' could be declared with attribute 'noreturn' [-Werror,-Wmissing-noreturn] { ^ ./bindings/js/JSDOMWindowBase.cpp:499:1: error: function 'instantiateStreaming' could be declared with attribute 'noreturn' [-Werror,-Wmissing-noreturn] { ^
https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Debug%20%28Build%29/builds/5600
Attachments
Patch
(1.87 KB, patch)
2018-05-01 11:53 PDT
,
GSkachkov
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2018-05-01 13:12 PDT
,
GSkachkov
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2018-05-01 13:21 PDT
,
GSkachkov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
GSkachkov
Comment 1
2018-05-01 11:53:13 PDT
Created
attachment 339210
[details]
Patch Fix iOS Simulator debug build
JF Bastien
Comment 2
2018-05-01 12:46:08 PDT
Comment on
attachment 339210
[details]
Patch You should tag the function with NO_RETURN instead.
Saam Barati
Comment 3
2018-05-01 12:55:44 PDT
Also name of this bug is wrong, it should start w/ a 2 maybe?
GSkachkov
Comment 4
2018-05-01 13:12:54 PDT
Created
attachment 339219
[details]
Patch Fix comments
GSkachkov
Comment 5
2018-05-01 13:15:12 PDT
(In reply to Saam Barati from
comment #3
)
> Also name of this bug is wrong, it should start w/ a 2 maybe?
Sorry not sure if I get, could you please fix name as it should be
Saam Barati
Comment 6
2018-05-01 13:16:10 PDT
r339098
is not a real revision
Ryan Haddad
Comment 7
2018-05-01 13:16:33 PDT
(In reply to Saam Barati from
comment #6
)
>
r339098
is not a real revision
Fixed.
GSkachkov
Comment 8
2018-05-01 13:21:34 PDT
Created
attachment 339220
[details]
Patch Upload patch with correct issue name
GSkachkov
Comment 9
2018-05-01 13:22:29 PDT
(In reply to Saam Barati from
comment #6
)
>
r339098
is not a real revision
Ohh, my bad, it was attachment-id :-(
JF Bastien
Comment 10
2018-05-01 13:27:12 PDT
Comment on
attachment 339220
[details]
Patch It's a bit weird to have it on the definition instead of the declaration (as the warning complained), but it keeps the code simpler and seems to keep clang happy (I just checked
https://godbolt.org/g/iF3sMd
). So r=me
WebKit Commit Bot
Comment 11
2018-05-01 14:27:11 PDT
Comment on
attachment 339220
[details]
Patch Clearing flags on attachment: 339220 Committed
r231210
: <
https://trac.webkit.org/changeset/231210
>
WebKit Commit Bot
Comment 12
2018-05-01 14:27:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13
2018-05-01 14:28:20 PDT
<
rdar://problem/39878773
>
Yusuke Suzuki
Comment 14
2018-05-01 23:26:42 PDT
Committed
r231226
: <
https://trac.webkit.org/changeset/231226
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug