Fix build error after r231194 https://bugs.webkit.org/show_bug.cgi?id=185169

Reviewed by JF Bastien.

Prevent compile error in iOS Simulator debug build
by tagging function

* bindings/js/JSDOMWindowBase.cpp:
(WebCore::JSDOMWindowBase::compileStreaming):
(WebCore::JSDOMWindowBase::instantiateStreaming):


Canonical link: https://commits.webkit.org/200662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231210 268f45cc-cd09-0410-ab3c-d52691b4dbfc